--- a/gitt.html
+++ b/gitt.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-dfvmkfdmv
-hgbgfvchfdjfchjcnfk
-jhbhhguhgu
-
+jhg
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <p>my second paragraph</p>
